refactor: data layers
