# openapi/Portal_swagger.json
@@ -143,7 +143,7 @@
                     }
                 }
             },
-            "put": {
+            "patch": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -578,14 +578,10 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "description": "I didn't find a way to disable automatic fields modify yet\nso, I use a tag to disable this feature here\nbut, we should keep our entities stateless if we can",
                     "type": "integer"
                 },
                 "expired_at": {
                     "type": "integer"
-                },
-                "hash": {
-                    "type": "string"
                 },
                 "id": {
                     "type": "string"
@@ -658,7 +654,6 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "description": "I didn't find a way to disable automatic fields modify yet\nso, I use a tag to disable this feature here\nbut, we should keep our entities stateless if we can",
                     "type": "integer"
                 },
                 "id": {
@@ -699,7 +694,6 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "description": "I didn't find a way to disable automatic fields modify yet\nso, I use a tag to disable this feature here\nbut, we should keep our entities stateless if we can",
                     "type": "integer"
                 },
                 "id": {
